@@ -53,6 +53,7 @@
  * #1437 (OrderStatisticsMarginalChecker bound message)
  * #1438 (Normal distribution: computeComplementaryCDF)
  * #1449 (P1LagrangeInterpolation sometimes fails)
+ * #1456 (truncation of distribution)
 
 == 1.14 release (2019-11-13) == #release-1.14
 
